# among-us-replay-mod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  inspect-code.yml  tagged-release.yml
injector/: main.cpp
source/: library.cpp  sniffer.cpp
source/autogen/: AmongUsClient.hpp  CustomNetworkTransform.hpp  DestroyableSingleton.hpp  GameData.hpp  Object.hpp  PlayerControl.hpp  PlayerOutfitType.hpp  PlayerTask.hpp  RoleBehaviour.hpp  RpcCalls.hpp  ShipStatus.hpp  SystemTypes.hpp  TaskTypes.hpp
source/autogen/InnerNet/: ClientData.hpp  GameStates.hpp  InnerNetClient.hpp  InnerNetObject.hpp  InnerNetServer.hpp
source/autogen/System/: String.hpp
source/autogen/System/Collections/Generic/: Dictionary.hpp  List.hpp
source/autogen/UnityEngine/: Application.hpp  Behaviour.hpp  Color.hpp  Component.hpp  MonoBehaviour.hpp  Object.hpp  Rigidbody2D.hpp  Vector2.hpp  Vector3.hpp
source/utils/: binary_serializer.hpp  dynamic_proc.hpp  encoding.cpp  encoding.hpp  enums.hpp  hook.hpp  il2cpp.hpp  il2cpp_core.hpp  logger.cpp  logger.hpp  mod_info.cpp  mod_info.hpp  periodic_printer.hpp  utils.cpp  utils.hpp
